...
                        _showCircleBadge = !_showCircleBadge;
                      }),
                      child: Text('Circle size'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('CircleBadge'),
                    badgeAnimation: badges.BadgeAnimation.size(
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
                    ),
...
                      shape: badges.BadgeShape.circle,
                      badgeColor: Colors.green,
                    ),
                    badgeContent: Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: Text(
                        'circle',
                        style: TextStyle(color: Colors.white),
                      ),
                    ),
                  ),

                  /// Square Badge with button
...
                        _showSquareBadge = !_showSquareBadge;
                      }),
                      child: Text('Square fade'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('SquareBadge'),
                    badgeAnimation: badges.BadgeAnimation.fade(
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
                    ),
...
                      shape: badges.BadgeShape.square,
                      badgeColor: Colors.black,
                    ),
                    badgeContent: Padding(
                      padding: const EdgeInsets.all(8.0),
                      child: Text(
                        '1111',
                        style: TextStyle(color: Colors.white),
                      ),
                    ),
                  ),
                ],
              ),
...
                        _showTwitterBadge = !_showTwitterBadge;
                      }),
                      child: Text('Twitter rotation'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('TwitterBadge'),
                    badgeAnimation: badges.BadgeAnimation.rotation(
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
                    ),
...
                        _showInstagramBadge = !_showInstagramBadge;
                      }),
                      child: Text('Instagram scale'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('InstagramBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
                    ),
...
                        }
                      }),
                      child: Text('Change color'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeColorBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
                    ),
...
                        }
                      }),
                      child: Text('Change icon'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeIconBadge'),
                    badgeAnimation: badges.BadgeAnimation.scale(
                      appearanceDisappearanceFadeAnimationEnabled: false,
                      disappearanceFadeAnimationDuration: Duration(
                        milliseconds: 200,
                      ),
                      curve: Curves.easeInCubic,
...
                children: [
                  ElevatedButton.icon(
                    onPressed: () => setState(() {
                      _badgeAmount++;
                    }),
                    icon: Icon(Icons.add),
                    label: Text('Add'),
                  ),
                  Padding(
                    padding: const EdgeInsets.symmetric(horizontal: 10.0),
                    child: ElevatedButton.icon(
                      onPressed: _badgeAmount != 0
                          ? () => setState(() {
                              _badgeAmount--;
                            })
                          : null,
                      icon: Icon(Icons.remove),
                      label: Text('Remove'),
                    ),
                  ),
                  badges.Badge(
                    key: const Key('ChangeAmountBadge'),
                    badgeAnimation: badges.BadgeAnimation.slide(
                      toAnimate: false,
                      colorChangeAnimationDuration: Duration(milliseconds: 200),
                      curve: Curves.easeInCubic,
                    ),
                    showBadge: _showBadgeAmount,
...
